--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon src/index.js",
     "migrate:latest": "npx knex migrate:latest --knexfile src/database/knexfile.js",
+    "migrate:rollback": "npx knex migrate:rollback --migrations-directory src/database/migrations --knexfile src/database/knexfile.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
